# 6-dof-simulator

./: .gitignore  CMakeLists.txt  Environment.py  README.md  compare_models.py  trajectory_A.csv  trajectory_B.csv  trajectory_C.csv  visualize.py
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: Autopilot.cpp  Autopilot.hpp  ControlSurface.cpp  ControlSurface.hpp  Environment.hpp  Guidance.cpp  Guidance.hpp  Missile.cpp  Missile.hpp  MissileDynamics.cpp  MissileDynamics.hpp  NumericalIntegrator.hpp  Simulation.cpp  Simulation.hpp  StateDerivatives.hpp  Vector3D.cpp  Vector3D.hpp
tests/: CMakeLists.txt  test_missile.cpp  test_vector3d.cpp
